# pyClim

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  README.md  pre-commit-config_JJ.yaml  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  installation.rst  pyclim.rst  usage.rst
docs/_build/doctrees/: environment.pickle  index.doctree  installation.doctree  modules.doctree  plotting.doctree  pyclim.doctree  usage.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  installation.html  modules.html  objects.inv  plotting.html  py-modindex.html  pyclim.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pyclim/: pyclim.html
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt  modules.rst.txt  plotting.rst.txt  pyclim.rst.txt  usage.rst.txt
examples/: example_script_pyclim.py  example_script_pyclim_v1.py
examples/data/: example_data.txt
src/pyClim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyclim/: __init__.py  pyclim.py
src/pyclim_test.egg-info/: PKG-INFO  SOURCES.txt
