[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 77.0.3"]

[project]
authors = [
  {name = "Alejandro Rodríguez Sánchez", email = "ars.rodriguezs@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  'pandas',
  'seaborn',
  'numpy',
  'matplotlib',
  'scipy',
  'pre-commit'
]
description = "A Python package that makes analysing climatological data easy, and pretty!"
keywords = ["climate", "timeseries", "plotting"]
license = "MIT"
license-files = ["LICEN[CS]E*"]
maintainers = [
  {name = "Alejandro Rodríguez Sánchez", email = "ars.rodriguezs@gmail.com"}
]
name = "pyClim"
readme = "README.md"
requires-python = ">=3.12"
version = "1.0.0"

[project.urls]
Homepage = "https://https://github.com/alexrsanchez/pyclim"
Issues = "https://https://github.com/alexrsanchez/pyclim/issues"
